# internal/ports/http/handlers/points/router.go
@@ -1,0 +1,38 @@
+package points
+
+import (
+	"context"
+
+	"github.com/Rasikrr/bagsy_backend_monolith/internal/domain/entity"
+	"github.com/Rasikrr/bagsy_backend_monolith/internal/ports/http/middlewares"
+	"github.com/go-chi/chi/v5"
+)
+
+type pointsService interface {
+	Create(ctx context.Context, point *entity.Point) error
+	GetByCode(ctx context.Context, code string) (*entity.Point, error)
+}
+
+type Controller struct {
+	pointsService  pointsService
+	authMiddleware middlewares.AuthMiddleware
+}
+
+func New(
+	pointsService pointsService,
+	authMiddleware middlewares.AuthMiddleware,
+) *Controller {
+	return &Controller{
+		pointsService:  pointsService,
+		authMiddleware: authMiddleware,
+	}
+}
+
+func (c *Controller) Init(router *chi.Mux) {
+	management := c.authMiddleware.AuthorizeManagement()
+	router.Route("/api/v1/points", func(r chi.Router) {
+		managementRoutes := r.With(management)
+		managementRoutes.Post("/", c.createPoint)
+		managementRoutes.Get("/{code}", c.getPoint)
+	})
+}
